--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
@@ -8,9 +11,9 @@
 
     <TextView
         android:id="@+id/city_name"
-        android:text="Hamburg, Germany"
+        android:text="Hamburg"
         android:textColor="#ffffff"
-        android:textSize="18sp"
+        android:textSize="48sp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
@@ -20,6 +23,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/description"
         android:text="Description"
+        android:textSize="25sp"
         android:layout_below="@+id/city_name"
         android:textColor="#fff"
         android:layout_centerHorizontal="true"
@@ -31,32 +35,39 @@
         android:layout_below="@+id/description"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffff"
-        android:textSize="55sp"
+        android:textSize="85sp"
         android:padding="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/temperature"
+    android:orientation="horizontal">
+
     <RelativeLayout
-        android:layout_width="170dp"
-        android:layout_height="310dp"
-        android:id="@+id/relative"
-        android:layout_below="@+id/temperature"
-        >
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sunrise"
+            android:text="Sunrise:"
             android:padding="5dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="#fff"
             android:id="@+id/sunrise_textView"
             android:layout_alignParentRight="true"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sunset"
+            android:text="Sunset:"
             android:padding="5dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="#fff"
             android:id="@+id/sunset_textView"
             android:layout_alignParentRight="true"
@@ -64,9 +75,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Humidity"
+            android:text="Humidity:"
             android:padding="5dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="#fff"
             android:id="@+id/humidity_textView"
             android:layout_alignParentRight="true"
@@ -74,9 +85,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pressure"
+            android:text="Pressure:"
             android:padding="5dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="#fff"
             android:id="@+id/pressure_textView"
             android:layout_alignParentRight="true"
@@ -84,9 +95,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Max Temp"
+            android:text="Max Temp:"
             android:padding="5dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="#fff"
             android:id="@+id/max_temp_textView"
             android:layout_alignParentRight="true"
@@ -94,26 +105,22 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Min Temp"
+            android:text="Min Temp:"
             android:padding="5dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="#fff"
             android:id="@+id/min_temp_textView"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/max_temp_textView"/>
 
-
     </RelativeLayout>
 
-
-
     <RelativeLayout
-        android:layout_width="170dp"
-        android:layout_height="310dp"
-        android:layout_below="@+id/temperature"
-        android:layout_toRightOf="@+id/relative"
-        >
-
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -121,7 +128,7 @@
             android:text="Sunrise:"
             android:padding="5dp"
             android:textColor="#fff"
-            android:textSize="15sp"/>
+            android:textSize="20sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -130,14 +137,14 @@
             android:padding="5dp"
             android:textColor="#fff"
             android:layout_below="@+id/sunrise"
-            android:textSize="15sp"/>
+            android:textSize="20sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/humidity"
             android:text="Humidity:"
             android:padding="5dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="#fff"
             android:layout_below="@+id/sunset" />
         <TextView
@@ -147,7 +154,7 @@
             android:text="Pressure:"
             android:padding="5dp"
             android:textColor="#fff"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:layout_below="@+id/humidity" />
         <TextView
             android:layout_width="wrap_content"
@@ -155,7 +162,7 @@
             android:id="@+id/max_temp"
             android:text="Max Temp:"
             android:padding="5dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="#fff"
             android:layout_below="@+id/pressure" />
         <TextView
@@ -165,16 +172,13 @@
             android:text="Min Temp:"
             android:padding="5dp"
             android:textColor="#fff"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:layout_below="@+id/max_temp" />
 
-
-
-
-
-
-
     </RelativeLayout>
+
+</LinearLayout>
+
 
 
 
