--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
 
     <TextView
         android:id="@+id/temperature"
-        android:text="20"
+        android:text="- -"
         android:layout_below="@+id/description"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffff"
@@ -39,6 +39,15 @@
         android:padding="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <com.android.volley.toolbox.NetworkImageView
+        android:id="@+id/networkImageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_above="@+id/temperature"
+        android:layout_toLeftOf="@+id/city_name"
+        android:layout_marginRight="15dp"
+       />
+
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -58,7 +67,7 @@
             android:layout_height="wrap_content"
             android:text="Sunrise:"
             android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="#fff"
             android:id="@+id/sunrise_textView"
             android:layout_alignParentRight="true"/>
@@ -67,7 +76,7 @@
             android:layout_height="wrap_content"
             android:text="Sunset:"
             android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="#fff"
             android:id="@+id/sunset_textView"
             android:layout_alignParentRight="true"
@@ -77,7 +86,7 @@
             android:layout_height="wrap_content"
             android:text="Humidity:"
             android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="#fff"
             android:id="@+id/humidity_textView"
             android:layout_alignParentRight="true"
@@ -87,7 +96,7 @@
             android:layout_height="wrap_content"
             android:text="Pressure:"
             android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="#fff"
             android:id="@+id/pressure_textView"
             android:layout_alignParentRight="true"
@@ -97,7 +106,7 @@
             android:layout_height="wrap_content"
             android:text="Max Temp:"
             android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="#fff"
             android:id="@+id/max_temp_textView"
             android:layout_alignParentRight="true"
@@ -107,7 +116,7 @@
             android:layout_height="wrap_content"
             android:text="Min Temp:"
             android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="#fff"
             android:id="@+id/min_temp_textView"
             android:layout_alignParentRight="true"
@@ -125,62 +134,59 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/sunrise"
-            android:text="Sunrise:"
+            android:text="- -"
             android:padding="5dp"
             android:textColor="#fff"
-            android:textSize="20sp"/>
+            android:textSize="25sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/sunset"
-            android:text="Sunset:"
+            android:text="- -"
             android:padding="5dp"
             android:textColor="#fff"
             android:layout_below="@+id/sunrise"
-            android:textSize="20sp"/>
+            android:textSize="25sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/humidity"
-            android:text="Humidity:"
+            android:text="- -"
             android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="#fff"
             android:layout_below="@+id/sunset" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/pressure"
-            android:text="Pressure:"
+            android:text="- -"
             android:padding="5dp"
             android:textColor="#fff"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:layout_below="@+id/humidity" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/max_temp"
-            android:text="Max Temp:"
+            android:text="- -"
             android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="#fff"
             android:layout_below="@+id/pressure" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/min_temp"
-            android:text="Min Temp:"
+            android:text="- -"
             android:padding="5dp"
             android:textColor="#fff"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:layout_below="@+id/max_temp" />
 
     </RelativeLayout>
 
 </LinearLayout>
-
-
-
 
 
 
